labs/incident-arena-07-config-secret-probes-service-networkpolicy/manifests/06-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: arena-client
  namespace: incident-arena-07-client
spec:
  containers:
    - name: client
      image: busybox:1.36
      command:
        - sh
        - -c
        - sleep 36000
  restartPolicy: Always
